[gd_scene load_steps=8 format=2]

[ext_resource path="res://gfx/ui_elements/right_sidebar/climate_atlas.png" type="Texture" id=1]
[ext_resource path="res://gfx/ui_elements/right_sidebar/crops_tile.png" type="Texture" id=2]
[ext_resource path="res://gfx/ui_elements/right_sidebar/terrain_atlas.png" type="Texture" id=3]
[ext_resource path="res://scenes/right_sidebar/helpers/RegionIcons.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 36, 36 )

[node name="RegionIcons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1144.0
margin_bottom = -756.0
rect_min_size = Vector2( 256, 44 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icons" type="MarginContainer" parent="."]
margin_right = 256.0
margin_bottom = 44.0
rect_min_size = Vector2( 256, 44 )
mouse_filter = 2
custom_constants/margin_right = 36
custom_constants/margin_top = 4
custom_constants/margin_left = 36
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox2" type="HBoxContainer" parent="Icons"]
margin_left = 36.0
margin_top = 4.0
margin_right = 220.0
margin_bottom = 40.0
custom_constants/separation = 38

[node name="Crops" type="TextureRect" parent="Icons/HBox2"]
margin_right = 36.0
margin_bottom = 36.0
texture = SubResource( 1 )

[node name="Climate" type="TextureRect" parent="Icons/HBox2"]
margin_left = 74.0
margin_right = 110.0
margin_bottom = 36.0
texture = SubResource( 2 )

[node name="Terrain" type="TextureRect" parent="Icons/HBox2"]
margin_left = 148.0
margin_right = 184.0
margin_bottom = 36.0
texture = SubResource( 3 )

[connection signal="mouse_entered" from="Icons/HBox2/Crops" to="." method="_on_Crops_mouse_entered"]
[connection signal="mouse_exited" from="Icons/HBox2/Crops" to="." method="_on_Crops_mouse_exited"]
[connection signal="mouse_entered" from="Icons/HBox2/Climate" to="." method="_on_Climate_mouse_entered"]
[connection signal="mouse_exited" from="Icons/HBox2/Climate" to="." method="_on_Climate_mouse_exited"]
[connection signal="mouse_entered" from="Icons/HBox2/Terrain" to="." method="_on_Terrain_mouse_entered"]
[connection signal="mouse_exited" from="Icons/HBox2/Terrain" to="." method="_on_Terrain_mouse_exited"]
